--- a/gradle.properties
+++ b/gradle.properties
@@ -7,17 +7,17 @@ org.gradle.daemon=false
 ## Environment Properties
 
 # The Minecraft version must agree with the Forge version to get a valid artifact
-minecraft_version=1.21
+minecraft_version=1.20.1
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
-minecraft_version_range=[1.21,1.22)
+minecraft_version_range=[1.20.1,1.21)
 # The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=51.0.32
+forge_version=47.3.5
 # The Forge version range can use any version of Forge as bounds or match the loader version range
-forge_version_range=[0,)
+forge_version_range=[47,)
 # The loader version range can only use the major version of Forge/FML as bounds
-loader_version_range=[0,)
+loader_version_range=[47,)
 # The mapping channel to use for mappings.
 # The default set of supported mapping channels are ["official", "snapshot", "snapshot_nodoc", "stable", "stable_nodoc"].
 # Additional mapping channels can be registered through the "channelProviders" extension in a Gradle plugin.
@@ -35,7 +35,7 @@ loader_version_range=[0,)
 mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=2024.07.28-1.21
+mapping_version=2023.09.03-1.20.1
 
 
 ## Mod Properties
@@ -48,12 +48,12 @@ mod_name=PCU Mod
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=0.1-1.21
+mod_version=0.1-1.20.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=net.awaren.pcumod
+mod_group_id=net.awaren.pcu_mod
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Awaren, Efifi
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Retrouvez tout l'univers et le lore du Pyrex Connected Universe !
+mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
