--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -57,6 +57,18 @@ description='''${mod_description}'''
     ordering="NONE"
     # Side this dependency is applied on - BOTH, CLIENT, or SERVER
     side="BOTH"
+
+[[dependencies.${mod_id}]] #optional
+    modId="geckolib"
+
+    mandatory=true
+
+    versionRange="4.4.7" #mandatory
+
+    ordering="NONE"
+
+    side="BOTH"
+
 # Here's another dependency
 [[dependencies.${mod_id}]]
     modId="minecraft"
