--- a/gradle.properties
+++ b/gradle.properties
@@ -56,6 +56,6 @@ mod_version=0.1-1.20.1
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=net.awaren.pcu_mod
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=Awaren, Efifi
+mod_authors=Awaren, Efifi, Ferb, Amber Studios, Pyrex
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Retrouvez le magnifique univers du Pyrex Connected Universe !.
